--- a/root/frontend/src/styles/globals.css
+++ b/root/frontend/src/styles/globals.css
@@ -1,9 +1,25 @@
-html, body {
+@import url("https://fonts.googleapis.com/css?family=Varela+Round");
+html {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
+  background: #1c1d22;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
   padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
+  letter-spacing: 1.1px;
 }
+
 
 #__next {
   height: 100%;
