--- a/root/frontend/src/styles/globals.css
+++ b/root/frontend/src/styles/globals.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
-html {
+html, body {
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 body,
@@ -22,5 +30,10 @@ html {
 
 
 #__next {
+  width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
