Closer for mobile, now trying to make menu width better

--- a/root/frontend/src/styles/Home.module.css
+++ b/root/frontend/src/styles/Home.module.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 720px;
+  max-width: auto;
   margin: 0 auto;
   list-style: none;
 }
